--- a/NetShopeWeb/NetShopeWeb.csproj
+++ b/NetShopeWeb/NetShopeWeb.csproj
@@ -186,9 +186,9 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ViewModel\Class1.cs" />
     <Compile Include="ViewModel\CustomerVM.cs" />
     <Compile Include="ViewModel\EmployeeVM.cs" />
+    <Compile Include="ViewModel\HtmlHelpers.cs" />
     <Compile Include="ViewModel\ProductVM.cs" />
     <Compile Include="ViewModel\SupplierVM.cs" />
   </ItemGroup>
