--- a/NetShopeWeb/NetShopeWeb.csproj
+++ b/NetShopeWeb/NetShopeWeb.csproj
@@ -208,7 +208,7 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\bootstrap.rtl.min.css" />
     <Content Include="Content\CSS\app.css" />
-    <Content Include="Content\CSS\bootstrap.css" />
+    <Content Include="Content\bootstrap.css" />
     <Content Include="Content\CSS\bootstrap.rtl.css" />
     <Content Include="Content\CSS\form.css" />
     <Content Include="Content\CSS\plugins\morris.css" />
@@ -296,7 +296,7 @@
     <Content Include="Content\img\women\girl-6.png" />
     <Content Include="Content\img\women\girl-7.png" />
     <Content Include="Content\JS\app.js" />
-    <Content Include="Content\JS\bootstrap.js" />
+    <Content Include="Scripts\bootstrap.js" />
     <Content Include="Content\JS\jquery-3.6.0.js" />
     <Content Include="Content\JS\jquery.unobtrusive-ajax.js" />
     <Content Include="Content\JS\jquery.validate.js" />
