--- a/NetShopeWeb/Web.config
+++ b/NetShopeWeb/Web.config
@@ -70,6 +70,6 @@
     </providers>
   </entityFramework>
 	<connectionStrings>
-		<add name="SqlServerContext" connectionString="Data Source=CELUSION-LAP93;Initial Catalog=NetShopeDbs;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="Feed" connectionString="Data Source=CELUSION-LAP93;Initial Catalog=NetShopeDbs;Integrated Security=True;" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 </configuration>
